Fixing white space

--- a/style sheet.css
+++ b/style sheet.css
@@ -734,10 +734,7 @@ top: -40px;
 }
 
 @media (max-width: 768px) {
-   
- *{
-    border: 1px solid red;
- }
+  
 
     html,body{
         width: 100%;
@@ -965,11 +962,10 @@ top: -40px;
         align-items: center;
         text-align: center;
     }
-    #btn5{
-        
-        
-    }
     
+    #btn5{
+        margin-left: -5px;
+    }
     #conatain1{
         order: 1;
     }
